style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    text-decoration: none;
    list-style: none;
    scroll-behavior: smooth;
}

:root{
    --text-color: #fff;
    --bg-color: #1b1f24;
    --second-bg-color: #22282f;
    --main-color: #13bbff;
    --other-color: #c3cad5;

    --h1-font: 4.5rem;
    --h2-font: 2.9rem;
    --p-font: 1rem;
}
body{
    color: var(--text-color);
    background-color: var(--bg-color);
    
}
/*Header*/

header{
    position: fixed;
    width: 100%;
    top: 0;
    right: 0;
    z-index: 100;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 40px 16%;
    background: transparent;
    transition: all .50s ease;
}
.logo{
    font-size: 36px;
    color: var(--text-color);
    font-weight: 600;

}
span{
    color: var(--main-color);
}
.navlist{
    display: flex;

}
.navlist a{
    font-size:var(--p-font);
    font-weight: 700;
    color: var(--other-color);
    margin-left: 40px;
    transition: all .50s ease;
}
.navlist a:hover{
    color: var(--main-color);
}
#menu-icon{
    font-size: 35px;
    z-index: 100;
    cursor: pointer;
    display: none;
}
.h-btn{
    display: inline-block;
    padding: 11px 26px;
    background: transparent;
    color: var(--main-color);
    border: 2px solid var(--main-color);
    border-radius: 8px;
    font-size: 15px;
    font-weight: 600;
    transition: all .50s ease;
}
.h-btn:hover{
    background: var(--main-color);
    color: var(--bg-color);

}
section{
    padding: 110px 16% 90px;
}

/*Hero*/

.hero{
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}
.main-content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 80px;
    
}
.text-content h4{
    font-size: 22px;
    margin-bottom: 10px;
}
.text-content h1{
    font-size:30px;
    line-height: 1.1;
    margin-bottom: 20px;
}
.text-content p{
    font-size: 18px;
    line-height: 1.8;
    margin-bottom: 25px;
}
.social{
    display: flex;
    gap: 15px;
    margin: 25px 0;
}
.social a{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 45px;
    height: 45px;
    border-radius: 50px;
    color: #13bbff;
    font-size: 40px;
    transition: 0.4s ease;
}
.social a:hover{
    background: #13bbff;
    color: #1b1f24;
    transform: translateY(-5px);
}
.main-btn{
    display: flex;
    gap: 20px;
    margin-top: 25px;
}
.btn{
    display: inline-block;
    padding: 12px 28px;
    background:#13bbff;
    color: #1b1f24;
    border: 2px solid #13bbff;
    border-radius: 8px;
    font-size: 16px;
    font-weight: 600;
    transition: 0.4s ease;
}
.btn:hover{
    background: transparent;
    color: #13bbff;
    transform: translateY(-5px);
}
.btn2{
    background: transparent;
    color: #13bbff;
}
.btn2:hover{
    background: #13bbff;
    color: #1b1f24;
}
.main-img img{
    width: 350px;
    height: 500px;
    max-width: 350px;
    object-fit: cover;
    border-radius: 70px;
}
header.sticky{
    background: var(--bg-color);
    box-shadow: 0 .1rem 1rem rgba(0,0,0, .2);
    padding: 16px 16%;
}
/*About*/

.about{
    background:var(--second-bg-color);
    display: grid;
    grid-template-columns: repeat(2,1fr);
    align-items: center;
    gap: 1rem;
}
.about-img img{
    width: 400px;
    height: 400px;
    max-width: 400px;
    aspect-ratio: 1/1;
    object-fit: cover;
    border-radius: 50%;
    border: 5px solid var(--main-color);
    transition: .5s ease; 
} 
.about-img img:hover{
    transform: scale(1.03);
    box-shadow: 0 0 25px var(--main-color);
}
.about-text h2{
    font-size: 3rem;
    margin-bottom: 15px;
}
.about-text h4{
    font-size: 1.5rem;
    margin-bottom: 20px;
}
.about-text p{
    font-size: 1rem;
    line-height: 1.8rem;
    margin-bottom: 15px;
}
.about-info{
    display: flex;
    gap: 20px;
    margin-top: 25px;
}
.info-box{
    background:#1b1f24;
    padding: 12px 18px;
    border-radius: 10px;
    border: 2px solid var(--main-color);
    display: inline-block;
    margin-right: 15px;
    min-width: 120px;
    transition: .4s ease;
}
.info-box h5{
    padding-top: 15px;
    font-size: 14px;
}
.info-box p{
    font-size: 16px;
    margin-top: 4px;
}
.info-box:hover{
    transform: translateY(-5px);
    box-shadow: 0 0 15px var(--main-color);
    cursor: pointer;
}
.email-info{
    margin-top: 20px;
    color: var(--main-color);
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 1rem;
}
.email-info i{
    color: var(--main-color);
    font-size: 22px;
}

/*Skills*/

.skills{
    background: var(--second-bg-color);
}
.skills-text{
    text-align: center;
    margin-bottom: 50px;
}
.skills-text h2{
   font-size: var(--h2-font); 
}
.skills-container{
    max-width: 800px;
    margin: auto;
    background: #22282f;
    padding: 40px;
    border-radius: 20px;
}
.skill{
    margin-bottom: 25px;
}
.info{
    display: flex;
    justify-content: space-between;
    margin-bottom: 8px;
    font-size: 18px;
    font-weight: 600;
}
.bar{
    width: 100%;
    height: 12px;
    background: #2b343f;
    border-radius: 50px;
    overflow: hidden;
}
.bar div{
    height: 100%;
    background: var(--main-color);
    border-radius: 50px;
    box-shadow: 0 0 10px var(--main-color);
}
.skill-text{
    text-align: center;
    color: #c3cad5;
    margin-top: 40px;
    font-weight: 600;
}


/*Skills Levels*/

.html{
    width: 85%;
}
.css{
    width: 80%;
}
.javascript{
    width: 70%;
}
.bootstrap{
    width: 75%;
}
.github{
    width: 75%;
}
.react{
    width: 60%;
}

/*Contact*/
.center-text{
    text-align: center;
}

.contact-form{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 4.2rem;
}
.contact-form form{
    position: relative;
    /* width: 600px; */
    width: 100%;
    max-width: 600px;
}
form input,
form textarea{
    width: 100%;
    padding: 20px;
    border: none;
    outline: none;
    box-shadow: 0 0 5px var(--main-color);
    background: #2d343f;
    color: var(--text-color);
    margin-bottom: 20px;
    border-radius: 8px;
}
form input::placeholder,
form textarea::placeholder{
    color: var(--other-color);
    font-size: 15px;
}
form .snd-btn{
    display: block;
    margin: 0 auto;
    padding: 11px 26px;
    background: var(--main-color);
    color: var(--bg-color);
    border: 2px solid var(--main-color);
    border-radius: 8px;
    font-size: 15px;
    font-weight: 600;
    transition: all .50s ease;
    width: 40%;
}
form .snd-btn:hover{
    background: transparent;
    color: var(--main-color);
    box-shadow: 0 0 20px var(--main-color);
    cursor: pointer;
}
/*Footer*/

.footer{
    display: flex;
    padding: 25px 10%;
    background: var(--second-bg-color);
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
}
.copyright p{
    font-size: 15px;
    font-weight: 400;
    color: var(--other-color);
}
.scroll-top{
    display:inline-flex;
    align-items: center;
    justify-content: center;
    background: #075fe4;
    width: 45px;
    height: 45px;
    border-radius: 50%;
    color: var(--text-color);
    font-size: 27px;
}

/*Responsive*/

@media (max-width: 1200px){
    .about{
        grid-template-columns: 1fr;
        gap: 2rem;
        text-align: center;
    }
    .about-img{
        text-align: center;
        width: 100%;
        height: 400px;
        max-width: 400px;
        border-radius: 50%;
        object-fit: cover;
        margin: 0 auto;
    }
    .about-info{
        display: flex;
        gap: 20px; 
        justify-content: center;
        text-align: center;
        flex-wrap: wrap;
        width: 100%;
        margin: 30px 0;
    }
    .info-box{
        width: 180px;
    }
    .email-info{
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 10px;
    }
    :root{
        --h1-font: 4rem;
        --h2-font: 2.2rem;
        --p-font: 15px;
    }
    .info-box h5{
        padding-top: 15px;
    }
}

@media (max-width: 992px){
    header{
        padding:20px 5%;
    }
    section{
        padding:90px 5% 70px;
    }
    .hero{
        min-height:100vh;
        height:auto;
    }
    .main-content{
        display:flex;
        flex-direction:column-reverse;
        align-items:center;
        justify-content:center;
        text-align:center;
        width: 100%;
        max-width: 100%;
        margin: 0 auto;
        gap:40px;
    }
    .text-content{
        width:100%;
        max-width:700px;
    }
    .text-content p{
        width:100%;
    }
     .main-img img{
        width:300px;
        height:400px;
        max-width:100%;
    }
    .social{
        justify-content:center;
    }
    .main-btn{
        justify-content:center;
        flex-wrap:wrap;
        gap:15px;
    }
    .about{
        grid-template-columns:1fr;
        text-align:center;
        gap:40px;
    }
    .about-img{
        display:flex;
        justify-content:center;
    }
    .about-info{
        justify-content:center;
        flex-wrap:wrap;
    }
    .email-info{
        justify-content:center;
    }
}
@media (max-width:768px){
    #menu-icon{
        display:block;
    }
    .top-btn{
        display:none;
    }
    .navlist{
        position:absolute;
        top:100%;
        right:-100%;
        width:250px;
        height:100vh;
        background:var(--bg-color);
        display:flex;
        flex-direction:column;
        padding-top:40px;
        transition:.5s;
    }
    .navlist.active{
        right:0;
    }
    .navlist a{
        display:block;
        padding:18px 30px;
        font-size:18px;
    }
}
@media (max-width:576px){
    .logo{
        font-size:30px;
    }
    section{
        padding:80px 20px;
    }
    .main-img img{
        width:240px;
        height:320px;
        border-radius:40px;
    }
    .text-content h4{
        font-size:20px;
    }
    .text-content h1{
        font-size:38px;
    }
    .text-content p{
        font-size:16px;
        line-height:1.8;
    }
    .main-btn{
        flex-wrap: wrap;
        justify-content: center;
    }
    .btn{
        width:220px;
        text-align:center;
    }
    .about-img img{
        width:260px;
        height:260px;
    }
    .skills-container{
        padding:25px;
    }
    .footer{
        flex-direction:column;
        text-align:center;
        gap:15px;
    }
}

